src/rules/flake8_2020/snapshots/ruff__rules__flake8_2020__tests__YTT303_YTT303.py.snap
---
source: src/rules/flake8_2020/mod.rs
expression: diagnostics
---
- kind:
    SysVersionSlice1Referenced: ~
  location:
    row: 4
    column: 6
  end_location:
    row: 4
    column: 17
  fix: ~
  parent: ~
- kind:
    SysVersionSlice1Referenced: ~
  location:
    row: 5
    column: 6
  end_location:
    row: 5
    column: 13
  fix: ~
  parent: ~

